<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/contour"

        tools:context=".MainActivity">
    <TextView
            android:text="@string/screen_login"
            android:textColor="@color/white"
            android:textSize="@dimen/screen_login_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_login_marginTop"
            android:layout_marginLeft="@dimen/screen_login_marginLeft"/>
    <EditText
            android:textColor="@color/white"
            android:text="@string/screen_user"
            android:gravity="center"
            android:textSize="@dimen/screen_user_size"
            android:id="@+id/screen_email"
            android:layout_width="@dimen/screen_user_lock_button_login_width"
            android:layout_height="@dimen/screen_user_password_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/screen_user_marginTop"/>
    <EditText
            android:layout_width="@dimen/screen_user_lock_button_login_width"
            android:id="@+id/screen_password"
            android:text="@string/screen_password"
            android:textSize="@dimen/screen_password_size"
            android:textColor="@color/denim"
            android:gravity="center"
            android:layout_height="@dimen/screen_user_password_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/screen_email"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/screen_incorrect_password_marginTop"
            android:id="@+id/screen_incorrect_password"
            android:layout_height="wrap_content"
            android:text="@string/screen_incorrect_password"
            android:textSize="@dimen/screen_incorrect_password_size"
            android:textColor="@color/rouge"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/screen_password"/>
    <TextView
            android:layout_width="@dimen/screen_user_lock_button_login_width"
            android:textSize="@dimen/button_login_size"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/screen_incorrect_password"
            android:layout_marginTop="@dimen/button_login_marginTop"
            android:text="@string/button_login"
            android:id="@+id/button_login"
            android:layout_height="@dimen/button_login_height"
            android:background="@drawable/contour2"
            android:textColor="@color/white"/>
    <TextView
            android:layout_width="wrap_content"
            android:id="@+id/screen_sign_up"
            android:layout_height="wrap_content"
            android:text="@string/screen_sign_up"
            android:textColor="@color/white"
            android:layout_below="@id/button_login"
            android:layout_marginLeft="@dimen/screen_sign_up_marginLeft"
            android:layout_marginTop="@dimen/screen_sign_up_marginTop"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/screen_sign_up"
            android:layout_below="@id/button_login"
            android:layout_marginTop="@dimen/button_sign_up_marginTop"
            android:text="@string/button_sign_up"
            android:textColor="@color/sapphire"/>
    <ImageView
            android:layout_width="@dimen/user1_lock_height_width"
            android:layout_height="@dimen/user1_lock_height_width"
            android:src="@mipmap/ic_launcher_user1"
            android:layout_marginTop="@dimen/ic_launcher_user1_marginTop"
            android:layout_marginLeft="@dimen/ic_launcher_user1_marginLeft"/>
    <ImageView
            android:layout_width="@dimen/user1_lock_height_width"
            android:layout_height="@dimen/user1_lock_height_width"
            android:src="@mipmap/ic_launcher_lock"
            android:layout_marginTop="@dimen/ic_launcher_lock_marginTop"
            android:layout_marginLeft="@dimen/ic_launcher_lock_marginLeft"/>
</RelativeLayout>